--- a/package.json
+++ b/package.json
@@ -1,15 +1,15 @@
 {
-  "name": "dev2.braytech.org",
-  "version": "1.3.13",
+  "name": "braytech.org",
+  "version": "1.3.14",
   "private": true,
   "dependencies": {
     "classnames": "^2.2.6",
     "dexie": "^2.0.4",
     "entities": "^1.1.2",
-    "i18next": "^13.1.2",
+    "i18next": "^13.1.5",
     "i18next-xhr-backend": "^1.5.1",
     "lodash": "^4.17.11",
-    "moment": "^2.23.0",
+    "moment": "^2.24.0",
     "moment-timezone": "^0.5.23",
     "prop-types": "^15.6.2",
     "react": "^16.7.0",
